k8s/source-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-deployment
  labels:
    app: source-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: source-deployment
  template:
    metadata:
      name: source-deployment
      labels:
        app: source-deployment
    spec:
      containers:
        - name: source-container
          image: source-image
          imagePullPolicy: Never
      restartPolicy: Always
