k8s/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
spec:
  rules:
    - host: registry
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: registry
                port:
                  name: http
